# LostInPieces2025

./: README.md
pipeline/: pyproject.toml
pipeline/data/processed/apple512x512/: apple512x512_puzzle_P2_Q2.npz  apple512x512_puzzle_P8_Q8.npz
pipeline/data/processed/tree225x225/: tree225x225_puzzle_P3_Q3.npz  tree225x225_puzzle_P9_Q9.npz
pipeline/data/processed/tree512x512/: tree512x512_puzzle_P3_Q3.npz  tree512x512_puzzle_P9_Q9.npz
pipeline/src/: classical_descriptors.py  puzzle_gen.py
pipeline/src/util/: helpers.py  logger.py
